fixed alignment bug for pay/remind buttons

--- a/src/components/InvoiceOptions/InvoiceOptions.component.css
+++ b/src/components/InvoiceOptions/InvoiceOptions.component.css
@@ -3,7 +3,7 @@
 .InvoiceOptionsContainer{
     height: 15vh;
     display: flex;
-    width: 90%;
+    width: 96.5%;
     background-color: rgb(240, 240, 240);
 
 }
