--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -100,8 +100,8 @@
 }
 
 .PendulumLogo{
-    height: 2.5em;
-    width: 7em;
+    height: 2em;
+    width: 6em;
 }
 
 
